Terraform/modules/security_groups/jenkins_prometheus_sg.tf
#file: modules/security_groups/jenkins_prometheus_sg.tf
resource "aws_security_group" "prod_jenkins_prometheus" {
  name        = "prod_sg_jenkins_prometheus"
  description = "Allow SSH from trusted IP"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.prod_bastion.id
]
  }

ingress {
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = [
    "37.19.205.165/32",
    "103.164.183.78/32",
    "52.221.89.250/32"
  ]
}


  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["103.164.183.78/32"] # or 0.0.0.0/0 if public access (not recommended)
  }

ingress {
  from_port   = 9090
  to_port     = 9090
  protocol    = "tcp"
  cidr_blocks = ["52.221.89.250/32"]
}

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["103.164.183.78/32"]
  }
  



#2 ip access dan sisanya ip github

    ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # (sementara, atau batasi ke IP GitHub)
    # cidr_blocks = ["140.82.112.0/20", "143.55.64.0/20","37.19.205.165/32","103.164.183.78/32",] # GitHub webhook IP ranges

    # cidr_blocks = [
      # "37.19.205.165/32",
      # "103.164.183.78/32",
    #   "4.148.0.0/16",
    #   "4.149.0.0/18",
    #   "4.149.64.0/19",
    #   "4.149.96.0/19",
    #   "4.149.128.0/17",
    #   "4.150.0.0/18",
    #   "4.150.64.0/18",
    #   "4.150.128.0/18",
    #   "4.150.192.0/19",
    #   "4.150.224.0/19",
    #   "4.151.0.0/16",
    #   "4.152.0.0/15",
    #   "4.154.0.0/15",
    #   "4.156.0.0/15",
    #   "4.175.0.0/16",
    #   "4.180.0.0/16",
    #   "4.207.0.0/16",
    #   "4.208.0.0/15",
    #   "4.210.0.0/17",
    #   "4.210.128.0/17",
    #   "4.227.0.0/17",
    #   "4.227.128.0/17",
    #   "4.231.0.0/17",
    #   "4.231.128.0/17",
    #   "4.236.0.0/17",
    #   "4.236.128.0/17",
    #   "4.242.0.0/17",
    #   "4.242.128.0/17",
    #   "4.245.0.0/17",
    #   "4.245.128.0/17",
    #   "4.246.0.0/17",
    #   "4.246.128.0/17",
    #   "4.249.0.0/17",
    #   "4.249.128.0/17",
    #   "4.255.0.0/17",
    #   "9.163.0.0/16",
    #   "9.169.0.0/17",
    #   "9.169.128.0/17",
    #   "9.234.0.0/17",
    #   "9.234.128.0/17",
    #   "13.64.0.0/16",
    #   "13.65.0.0/16",
    #   "13.66.0.0/17",
    #   "13.66.128.0/17",
    #   "13.67.128.0/20",
    #   "13.67.144.0/21",
    #   "13.67.152.0/24",
    #   "13.67.153.0/28",
    #   "13.67.153.32/27",
    #   "13.67.153.64/26",
    #   "13.67.153.128/25",
    #   "13.67.155.0/24",
    #   "13.67.156.0/22",
    #   "13.67.160.0/19",
    #   "13.67.192.0/18",
    #   "13.68.0.0/17",
    #   "13.68.128.0/17",
    #   "13.69.0.0/17",
    #   "13.69.128.0/17",
    #   "13.70.192.0/18",
    #   "13.72.64.0/18",
    #   "13.73.32.0/19",
    #   "13.73.128.0/18",
    #   "13.73.224.0/21",
    #   "13.73.240.0/20",
    #   "13.74.0.0/16",
    #   "13.77.64.0/18",
    #   "13.77.128.0/18",
    #   "13.79.0.0/16",
    #   "13.80.0.0/15",
    #   "13.82.0.0/16",
    #   "13.83.0.0/16",
    #   "13.84.0.0/15",
    #   "13.86.0.0/17",
    #   "13.86.128.0/17",
    #   "13.87.112.0/21",
    #   "13.87.128.0/17",
    #   "13.88.0.0/17",
    #   "13.88.128.0/18",
    #   "13.88.200.0/21",
    #   "13.89.0.0/16",
    #   "13.90.0.0/16",
    #   "13.91.0.0/16",
    #   "13.92.0.0/16",
    #   "13.93.0.0/17",
    #   "13.93.128.0/17",
    #   "13.94.64.0/18",
    #   "13.94.128.0/17",
    #   "13.95.0.0/16"
    # ]

    description = "Allow Jenkins UI access from trusted IPs"
  }

#2 ip access dan sisanya ip github
  # ingress {
  #   from_port   = 80
  #   to_port     = 80
  #   protocol    = "tcp"
  #   cidr_blocks = [
  #     "37.19.205.165/32",
  #     "103.164.183.78/32",   
  # ]  
  # }

  
  # ingress {
  #   from_port   = 443
  #   to_port     = 443
  #   protocol    = "tcp"
  #   cidr_blocks = [
  #     "37.19.205.165/32",
  #     "103.164.183.78/32"
  #   ]
  #   }

    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
